sass/components/_section-header.scss
.section-header {
  text-align: center;
  display: block;

  h2 {
    color: $colorSecondary;
    font-size: 24px;
    margin-bottom: 15px;
  }

  .underline {
    width: 200px;
    height: 2px;
    background-color: $colorPrimary;
    display: inline-block;
  }
}

